feat: new asset category rest api